fix: replacing ellipsis class with truncate from Tailwind

--- a/packages/ui-components/src/components/index.css
+++ b/packages/ui-components/src/components/index.css
@@ -2,15 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-	.av-truncate-text {
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-		word-wrap: normal;
-	}
-}
-
 @layer components {
 	/**
 	 * There are 2 labels, one visible and one
